--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,2 +1,18 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<Error><Code>AllAccessDisabled</Code><Message>All access to this object has been disabled</Message><RequestId>CMDCNJ297T2JKSMH</RequestId><HostId>jH1sjyHS93C57I3Zs3jV69rvoEvveYvN6feEILT9RR3AITX+9NIYF6yNkD+NReVLQ4YLE2W/+yM=</HostId></Error>
+on: 
+  push:
+    branches:
+      - main
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+      - uses: aws-actions/setup-sam@v1
+      - uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - run: sam build --use-container
+      - run: sam deploy --no-confirm-changeset --nofail-on-empty-changeset
