--- a/template.yaml
+++ b/template.yaml
@@ -1,34 +1,22 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: >
-  lambda-hello-world
-  
-  Sample SAM Template for lambda-hello-world
-
-# More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
-Globals:
-  Function:
-    Timeout: 5
-
+Description: AWS SAM template with a simple API definition
 Resources:
-  lambda-hello-world:
-    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+  ApiGatewayApi:
+    Type: AWS::Serverless::Api
     Properties:
-      CodeUri: lambda-hello-world/
-      Handler: app.lambda_handler
-      Runtime: python3.8
-      Policies:
-        - AWSLambdaBasicExecutionRole
-      Tracing: Active # https://docs.aws.amazon.com/lambda/latest/dg/lambda-x-ray.html
-      Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
-        Variables:
-          KEY1: VALUE
-Outputs:
-  # Find out more about other implicit resources you can reference within SAM
-  # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
-  lambda-hello-world:
-    Description: "Lambda Function ARN"
-    Value: !GetAtt lambda-hello-world.Arn
-  lambda-hello-worldIamRole:
-    Description: "Implicit IAM Role created for lambda-hello-world function"
-    Value: !GetAtt lambda-hello-worldRole.Arn
+      StageName: prod
+  ApiFunction: # Adds a GET api endpoint at "/" to the ApiGatewayApi via an Api event
+    Type: AWS::Serverless::Function
+    Properties:
+      Events:
+        ApiEvent:
+          Type: Api
+          Properties:
+            Path: /
+            Method: post
+            RestApiId:
+              Ref: ApiGatewayApi
+      Runtime: python3.7
+      Handler: app.handler
+      PackageType: Zip
